# PlayerIntelligenceSystem

./: .dockerignore  .env.local.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  buildspec.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
agents/: churn_agent.py  recommendation_agent.py  segmentation_agent.py
app/: app.py
backend/: __init__.py  api.py
data/: generate_data.py  players.csv
deploy/: ecs-task-definition.json
llm/: llm.py
models/: churn_model.pkl  train_churn_model.py
orchestration/: graph.py
rag/: load_knowledge.py  retriever.py  vector_store.py
rag/chroma_db/: chroma.sqlite3
scripts/: install-git-hooks.ps1  push-to-ecr.ps1  run_quality_gate.ps1  start_with_s3.cmd
scripts/git-hooks/: pre-push
tests/: conftest.py
tests/integration/: test_api.py  test_data.py  test_pipeline.py
tests/unit/: test_agents.py  test_api_unit.py  test_data_loader.py  test_train_churn_model.py
utils/: config.py  data_loader.py
