[project]
name = "player-intelligence-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.0",
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.2",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "opik>=1.11.14",
    "pandas>=2.3.3",
    "ragas>=0.4.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -p no:cacheprovider"
markers = [
    "unit: fast tests for isolated functions",
    "integration: tests covering multiple modules working together",
]

[tool.coverage.run]
source = ["agents", "backend", "models", "orchestration", "utils"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
omit = ["tests/*"]
fail_under = 70
